<resources>
    <string name="app_name">SWCBRBLV</string>
    <string name="textview1">Habilitar el Switch que deseas</string>
    <string name="switch_1">Switch1</string>
    <string name="switch_2">Switch2</string>
    <string name="textview2">Marca el CheckBox que deseas</string>
    <string name="checkbox1">CheckBox1</string>
    <string name="checkbox2">CheckBox2</string>
    <string name="textview3">Selecciona el RadioButton que deseas</string>
    <string name="radiobutton1">RadioButton1</string>
    <string name="radiobutton2">RadioButton2</string>
    <string name="button1">Verificar</string>
    <string name="listview1"></string>
</resources>